<resources>
    <string name="app_name">KelasBangsaMurid</string>
    <string name="todo">TODO</string>
    <string name="nav_beranda">Beranda</string>
    <string name="nav_jadwal_kelas">Jadwal Kelas</string>
    <string name="nav_obrolan">Obrolan</string>
    <string name="nav_akun">Akun</string>
    <string name="btn_mulai">Mulai</string>
    <string name="btn_lewat">Lewat</string>
    <string name="title_kelas_bangsa">Kelas Bangsa</string>
    <string name="kamu_dapat_menentukan_tarifmu_sendiri_berdasarkan_kebutuhanmu">Kamu dapat menentukan tarifmu sendiri berdasarkan kebutuhanmu.</string>
    <string name="et_hint_email_sign_in">Email</string>
    <string name="et_hint_kata_sandi_sign_in">Kata Sandi</string>
    <string name="tv_ket_masuk">Masuk</string>
    <string name="btn_to_sign_up"><u>Daftar</u></string>
    <string name="btn_lupa_kata_sandi"><u>Lupa Kata Sandi ?</u></string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="syarat_persetujuan">Saya setuju dengan <b>syarat dan ketentuan yang berlaku.</b>  Saya menyatakan data yang telah diisi sudah benar dan dapat dipertanggungjawabkan.</string>
    <string name="btn_to_sign_in"><u>Masuk</u></string>
    <string name="tv_ket_daftar">Daftar</string>
    <string name="et_hint_nama_lengkap_sign_up">Nama Lengkap</string>
    <string name="et_hint_email_sign_up">Email</string>
    <string name="et_hint_no_telepon_sign_up">No. Telepon</string>
    <string name="et_hint_kata_sandi_sign_up">Kata Sandi</string>
    <string name="tv_title_saldo_anda">Saldo Anda</string>
    <string name="tv_rp">Rp</string>
    <string name="tv_kat_akademik">Akademik</string>
    <string name="tv_kat_bahasa">Bahasa</string>
    <string name="tv_kat_agama">Agama</string>
    <string name="tv_kat_keterampilan">Keterampilan</string>
    <string name="tv_kat_teknologi">Teknologi</string>
    <string name="tv_kat_olahraga">Olahraga</string>
    <string name="tv_kat_musik">Musik</string>
    <string name="tv_kat_semua">Semua</string>
    <string name="btn_lihat_semua">Lihat Semua</string>
    <string name="btn_pilih">Pilih</string>
    <string name="title_menu_paket_belajar">Paket Belajar</string>
    <string name="title_menu_guru_favorit">Guru Favorit</string>
    <string name="title_menu_bidang_studi_favorit">Bidang Studi Favorit</string>
    <string name="tv_ket_saldo">Saldo</string>
    <string name="tv_personal_info_menu">Personal Info</string>
    <string name="tv_transaksi_menu">Transaksi</string>
    <string name="tv_keluhan_menu">Keluhan</string>
    <string name="tv_pengaturan_menu">Pengaturan</string>
    <string name="tv_keluar_menu">Keluar</string>
    <string name="appbar_personal_info">Personal Info</string>
    <string name="menu_edit">Edit</string>
    <string name="title_detail_kontak">Detail Kontak</string>
    <string name="title_alamat">Alamat</string>
    <string name="tv_harap_diisi_perso_info">~Harap Diisi~</string>
    <string name="tv_alamat_harap_diisi_perso_info">~Alamat Harap Diisi~</string>
    <string name="subtitle_nama_lengkap">Nama Lengkap</string>
    <string name="subtitle_jenis_kelamin">Jenis Kelamin</string>
    <string name="subtitle_tanggal_lahir">Tanggal Lahir</string>
    <string name="subtitle_tingkat_sekolah">Tingkat Sekolah</string>
    <string name="subtitle_email">Email</string>
    <string name="subtitle_no_telepon">No. Telepon</string>
    <string name="title_informasi_utama">Informasi Utama</string>
    <string name="et_hint_nama_lengkap">Nama Lengkap</string>
    <string name="rb_pria">Pria</string>
    <string name="rb_wanita">Wanita</string>
    <string name="et_hint_tanggal_lahir">Tanggal Lahir</string>
    <string name="et_hint_tingkat_sekolah">Tingkat Sekolah</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_no_telepon">No. Telepon</string>
    <string name="et_hint_alamat">Alamat</string>
    <string name="et_hint_provinsi">Provinsi</string>
    <string name="et_hint_kota_kabupaten">Kota/Kabupaten</string>
    <string name="et_hint_kecamatan">Kecamatan</string>
    <string name="et_hint_detail_alamat">Detail Alamat</string>
    <string name="et_hint_kode_pos">Kode Pos</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_ganti_foto">Ganti Foto</string>
    <string name="appbar_ubah_akun">Ubah Akun</string>
    <string name="appbar_lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="tv_title_forgot_password">Harap masukkan alamat email Anda untuk menerima verifikasi</string>
    <string name="btn_kirim">Kirim</string>
    <string name="appbar_verifikasi_email_anda">Verifikasi Email Anda</string>
    <string name="tv_title_verifikasi_email">Harap masukkan kode 4 digit</string>
    <string name="btn_kirim_ulang_kode"><u>Kirim ulang kode</u></string>
    <string name="btn_verifikasi">Verifikasi</string>
    <string name="tv_title_new_email">Kata sandi baru Anda harus berbeda dari kata sandi yang digunakan sebelumnya</string>
    <string name="et_hint_kata_sandi_baru">Kata Sandi Baru</string>
    <string name="et_hint_konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="title_kata_sandi_sukses">Kata Sandi Sukses</string>
    <string name="silahkan_coba_masuk_kembali_ke_dalam_aplikasi_kelas_bangsa">Silahkan coba masuk kembali ke dalam Aplikasi Kelas Bangsa</string>
    <string name="title_verifikasi_data">Verifikasi Data</string>
    <string name="title_decs_verifikasi_data">Yuk lengkapi data dibawah ini untuk menjadi murid di Kelas Bangsa</string>
    <string name="harap_masukkan_kode_4_digit">Harap masukkan kode 4 digit</string>
    <string name="appbar_semua_kategori">Semua Kategori</string>
    <string name="appbar_notifikasi">Notifikasi</string>
    <string name="hapus_list">Hapus</string>
    <string name="appbar_akademik">Akademik</string>
    <string name="appbar_bahasa">Bahasa</string>
    <string name="appbar_agama">Agama</string>
    <string name="appbar_keterampilan">Keterampilan</string>
    <string name="appbar_teknologi">Teknologi</string>
    <string name="appbar_olahraga">Olahraga</string>
    <string name="appbar_musik">Musik</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_bidang_studi">Bidang Studi</string>
    <string name="title_tingkat_pendidikan">Tingkat Pendidikan</string>
    <string name="pilih_tingkatan_edittext">Pilih Tingkatan</string>
    <string name="title_guru">Guru</string>
    <string name="btn_pilih_guru">Pilih Guru</string>
    <string name="title_jadwal_kelas">Jadwal Kelas</string>
    <string name="title_atur_jadwal">Atur Jadwal</string>
    <string name="tv_pilih_tanggal">Pilih Tanggal</string>
    <string name="tv_pilih_jam">Pilih Jam</string>
    <string name="title_pertemuan">Pertemuan</string>
    <string name="title_lokasi">Lokasi</string>
    <string name="hint_pilih_lokasi">Pilih Lokasi</string>
    <string name="title_masukkan_peserta">Masukkan Peserta</string>
    <string name="title_peserta">Peserta</string>
    <string name="title_total">Total</string>
    <string name="tv_default">Rp. 0</string>
    <string name="btn_pesan_kelas">Pesan Kelas</string>
    <string name="menu_calendar">Calendar</string>
    <string name="jadwal_kelas_masih_kosong">Jadwal Kelas Masih Kosong</string>
    <string name="silahkan_pesan_kelas_anda_dan_pilihlah_guru_sesuai_keinginana_anda">Silahkan pesan kelas anda dan pilihlah guru sesuai keinginan anda !</string>
    <string name="menu_notifikasi">Notifikasi</string>
    <string name="title_sub_total">Sub Total</string>
    <string name="title_metode_pembayaran">Metode Pembayaran</string>
    <string name="btn_pilih_metode">Pilih Metode</string>
    <string name="mohon_pilih_metode_pembayaran">Mohon Pilih Metode Pembayaran</string>
    <string name="title_ringkasan">Ringkasan</string>
    <string name="title_biaya_tambahan">Biaya Tambahan</string>
    <string name="btn_bayar">Bayar</string>
    <string name="btn_batalkan_transaksi"><u>Batalkan Transaksi</u></string>
    <string name="sudah_transfer_melalu_atm_internet_mobile_banking">Sudah transfer melalui <b>ATM/Internet/Mobile Banking ?</b></string>
    <string name="btn_saya_sudah_transfer">Saya sudah transfer</string>
    <string name="tv_title_tagihan">Tagihan</string>
    <string name="lakukan_pembayaran_sebelum">Lakukan pembayaran sebelum</string>
    <string name="tv_title_no_rekening_mandiri">No. Rekening Mandiri</string>
    <string name="jumlah_harus_dibayar">Jumlah Harus Dibayar</string>
    <string name="_2_digit_terakhir_adalah_kode_unik_untuk_transfer_bank">2 digit terakhir adalah kode unik untuk transfer bank</string>
    <string name="title_id_transaksi">ID Transaksi</string>
    <string name="title_detail_transaksi">Detail Transaksi</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_biaya">Biaya</string>
    <string name="et_hint_nama_bank">Nama Bank</string>
    <string name="title_konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="btn_bukti_transaksi">Bukti Transaksi</string>
    <string name="btn_konfirmasi">Konfirmasi</string>
    <string name="et_hint_no_rekening">No. Rekening</string>
    <string name="et_hint_nama_akun">Nama Akun</string>
    <string name="et_hint_jumlah">Jumlah</string>
    <string name="unggah_bukti_pembayaran">Unggah Bukti Pembayaran</string>
    <string name="title_jumlah_transaksi">Jumlah</string>
    <string name="title_detail_pesanan_transaksi">Detail Pesanan</string>
    <string name="menu_filter">Filter</string>
    <string name="title_filter_guru">Filter Guru</string>
    <string name="berdasarkan">Berdasarkan</string>
    <string name="title_provinsi">Provinsi</string>
    <string name="hint_pilih_provinsi">Pilih Provinsi</string>
    <string name="title_kota_kabupaten">Kota/Kabupaten</string>
    <string name="hint_pilih_kota_kabupaten">Pilih Kota/Kabupaten</string>
    <string name="title_urutkan">Urutkan</string>
    <string name="chip_4_keatas">4 Keatas</string>
    <string name="chip_ulasan_terbanyak">Ulasan Terbanyak</string>
    <string name="title_harga">Harga</string>
    <string name="hint_et_terendah">Terendah</string>
    <string name="hint_et_tertinggi">Tertinggi</string>
    <string name="btn_terapkan">Terapkan</string>
    <string name="title_informasi_profile_guru">Informasi</string>
    <string name="reviews_profile_guru">Reviews</string>
    <string name="bio_profike_guru">Bio</string>
    <string name="title_galeri_profile_guru">Galeri</string>
    <string name="title_keahlian_profile_guru">Keahlian</string>
    <string name="title_ulasan_profile_guru">Ulasan Murid</string>
    <string name="btn_ketersediaan">Ketersediaan</string>
    <string name="title_filter_paket_belajar">Filter Paket Belajar</string>
    <string name="hint_pilih_kategori">Pilih Kategori</string>
    <string name="hint_pilih_bidang_studi">Pilih Bidang Studi</string>
    <string name="saldo_saat_ini">Saldo saat ini</string>
    <string name="tgl_saldo_saat_ini">12 Desember 2021</string>
    <string name="total_saldo">Rp 500.000</string>
    <string name="btn_penarikan_saldo">Penarikan Saldo</string>
    <string name="title_riwayat_penarikan">Riwayat Penarikan</string>
    <string name="title_botsheet_penarikan">Penarikan</string>
    <string name="et_hint_no_rekening_tujuan">No. Rekening Tujuan</string>
    <string name="ket_saldo_botsheet">Saldo</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="masukkan_pin_anda">Masukkan PIN Anda</string>
    <string name="lupa_kode_pin">Lupa Kode PIN ?</string>
</resources>