<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    tools:context=".ui.tarikSaldo.BotSheetPenarikanFragment">

    <View
        android:layout_width="63dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/toogle_bottom_sheet"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_md">

        <TextView
            android:id="@+id/tv_title_penarikan_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_semi_bold"
            android:text="@string/title_botsheet_penarikan"
            android:textColor="@color/hitam"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_regular"
            android:text="@string/ket_saldo_botsheet"
            android:textColor="@color/abu_tua"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_penarikan_saldo"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_close_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:layout_marginTop="@dimen/margin_sm"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_jumlah_penarikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_jumlah"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:layout_marginTop="@dimen/margin_sm"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_nama_bank"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:layout_marginTop="@dimen/margin_sm"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_no_rek_tujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_no_rekening_tujuan"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_md">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kirim_penarikan"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/work_sans_semi_bold"
            android:text="@string/btn_kirim"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>