<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.paketBelajar.FilterPaketBelajarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/putih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_black"
            app:title="Filter"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Tab"
            app:titleTextColor="@color/hitam" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">


        <TextView
            android:id="@+id/title_filter_paket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_semi_bold"
            android:text="@string/title_filter_paket_belajar"
            android:textColor="@color/hitam"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_filter_paket_berdasarkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berdasarkan"
            android:textSize="@dimen/font_md"
            android:fontFamily="@font/work_sans_regular"
            android:textColor="@color/abu_tua"
            app:layout_constraintTop_toBottomOf="@id/title_filter_paket"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title_filter_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_kategori"
            android:layout_marginTop="@dimen/margin_md"
            android:textSize="20sp"
            android:fontFamily="@font/work_sans_semi_bold"
            android:textColor="@color/hitam"
            app:layout_constraintTop_toBottomOf="@id/title_filter_paket_berdasarkan"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_pilih_kategori"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_container_grey"
            app:layout_constraintTop_toBottomOf="@id/title_filter_kategori">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="@dimen/padding_md"
                android:paddingEnd="@dimen/padding_sm"
                android:text="@string/hint_pilih_kategori"
                android:textSize="16sp"
                android:textColor="@color/hitam"
                android:fontFamily="@font/work_sans_medium"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow_down_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_filter_bs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_bidang_studi"
            android:layout_marginTop="@dimen/margin_md"
            android:textSize="20sp"
            android:fontFamily="@font/work_sans_semi_bold"
            android:textColor="@color/hitam"
            app:layout_constraintTop_toBottomOf="@id/container_pilih_kategori"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_pilih_bs"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_container_grey"
            app:layout_constraintTop_toBottomOf="@id/title_filter_bs">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="@dimen/padding_md"
                android:paddingEnd="@dimen/padding_sm"
                android:text="@string/hint_pilih_bidang_studi"
                android:textSize="16sp"
                android:textColor="@color/hitam"
                android:fontFamily="@font/work_sans_medium"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow_down_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/title_filter_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_harga"
            android:layout_marginTop="@dimen/margin_md"
            android:textSize="20sp"
            android:fontFamily="@font/work_sans_semi_bold"
            android:textColor="@color/hitam"
            app:layout_constraintTop_toBottomOf="@id/container_pilih_bs"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_harga_terendah"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="@dimen/margin_md"
            android:padding="@dimen/padding_md"
            android:inputType="number"
            android:hint="@string/hint_et_terendah"
            android:textSize="@dimen/font_md"
            android:fontFamily="@font/work_sans_medium"
            android:textColor="@color/hitam"
            android:background="@drawable/bg_container_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/et_harga_tertinggi"
            app:layout_constraintTop_toBottomOf="@id/title_filter_harga"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_harga_tertinggi"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_md"
            android:inputType="number"
            android:background="@drawable/bg_container_grey"
            android:fontFamily="@font/work_sans_medium"
            android:hint="@string/hint_et_tertinggi"
            android:padding="@dimen/padding_md"
            android:textColor="@color/hitam"
            android:textSize="@dimen/font_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_harga_terendah"
            app:layout_constraintTop_toBottomOf="@id/title_filter_harga" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_terapkan"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_terapkan"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/work_sans_semi_bold"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>